# volcanobot

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vba
include/: CloudStitcher.h  MeshConstructor.h  PCDRegistration.h  errorMsgHandler.h  mainwindow.h  oni-to-pcd.h
src/: CMakeLists.txt  CloudStitcher.cpp  MeshConstructor.cpp  PCDRegistration.cpp  cloud_registration.cpp  cloud_viewer.cpp  errorMsgHandler.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  oni-to-pcd.cpp  onitopcd.cpp  pcd_write_test.cpp  vbaUI  vbaUI.pro
ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
ui/src/: CMakeLists.txt  main.cpp  mainwindow.ui
